# spark-researcher

./: .env.dspy.example  .gitignore  AGENTS.md  AUTORESEARCH.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_autoloop.ps1  spark-researcher.project.json  spark.toml
.autoresearch/capsules/: 20260310-095349-008686-20260310-095338-766531-train-once.manifest.json  20260310-095349-008686-20260310-095338-766531-train-once.md
docs/: ADVISORY.md  AGENT_BACKENDS.md  ARCHITECTURE.md  AUTOLOOP.md  BELIEFS.md  CHECKLOOP.md  CHIPS.md  CHIP_BAKEOFF.md  CHIP_BENCHMARK_BRIDGE_GUIDE.md  CHIP_DSPY_METHOD.md  CHIP_INTELLIGENCE_CONTRACT.md  CHIP_INTELLIGENCE_ROLLOUT.md  CHIP_MEMORY_ROLLOUT.md  CHIP_ONE_LOOP_FLYWHEEL.md  CHIP_REGISTRY.md  CHIP_REMEDIATION_PROMPTS.md  CHIP_RESEARCH_PACKET_SCHEMA.md  CHIP_SYSTEMS.md  CHIP_TAGGING_RULESET.md  CHIP_VALIDATION.md  INTENT.md  MASTER_CHIP_ARCHITECT_PROMPT.md  MEMORY.md  OBSIDIAN.md  PRESETS.md  PUBLICATION_MAP.md  README.md  RELIABILITY_TEST_PLAN.md  RULES.md  SELF_EDITING.md  animation-prompts.md  article-visuals.md
docs/archive/: AI_LAB_MAP.md  CHIP_ECOSYSTEM_HARDENING_PLAN.md  EXTERNAL_CHIP_TASKS.md  FRONTIER_LAB_BENCHMARKING_BOOK.md  README.md
domain-chip-agentic-marketing/: README.md
domain-chip-build-orchestration/: pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-build-orchestration/src/domain_chip_build_orchestration/: __init__.py  cli.py  evaluate.py
domain-chip-capital-readiness/: pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-capital-readiness/src/domain_chip_capital_readiness/: __init__.py  cli.py  evaluate.py
domain-chip-customer-validation/: pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-customer-validation/src/domain_chip_customer_validation/: __init__.py  cli.py  evaluate.py
domain-chip-founder-coaching/: pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-founder-coaching/src/domain_chip_founder_coaching/: __init__.py  cli.py  evaluate.py
domain-chip-gtm-distribution/: pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-gtm-distribution/src/domain_chip_gtm_distribution/: __init__.py  cli.py  evaluate.py
domain-chip-pokemon-player/: .gitignore  README.md  launch_pokemon_player.ps1  pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-pokemon-player/benchmarks/states/: README.md
domain-chip-pokemon-player/docs/: POKEMON_PLAYER_ONE_LOOP_SPEC.md  POKEMON_PLAYER_SOURCE_MAP.md  POKEMON_SPEEDRUN_RESOURCES.md  POKEMON_SPEEDRUN_TASKS.md
domain-chip-pokemon-player/docs/research-ingest/: approved-sources.json  discovery-seeds.json
domain-chip-pokemon-player/src/domain_chip_pokemon_player/: benchmarks.py  cli.py  emulator.py  play.py  seed_states.py
domain-chip-portfolio-knowledge/: pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-portfolio-knowledge/src/domain_chip_portfolio_knowledge/: __init__.py  cli.py  evaluate.py
domain-chip-roblox-development/: .gitignore  README.md  pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-roblox-development/.spark-swarm/: collective-sync.json
domain-chip-roblox-development/docs/: OBBY_SAMPLE_BRIEF.json  ROBLOX_IMPLEMENTATION_PLAN.md  ROBLOX_ONE_LOOP_SPEC.md  ROBLOX_SCAFFOLD_RUNBOOK.md  ROBLOX_SYSTEM_AUDIT_2026-03-21.md  ROBLOX_TASK_PLAN.md  ROBLOX_VALIDATION_SNAPSHOT_2026-03-21.md
domain-chip-roblox-development/src/domain_chip_roblox_development/: cli.py  quality.py  scaffold.py  studio_sync.py
domain-chip-roblox-development/tests/: test_cli.py  test_scaffold.py  test_tooling.py
domain-chip-trust-compliance/: pyproject.toml  spark-chip.json  spark-researcher.project.json
domain-chip-trust-compliance/src/domain_chip_trust_compliance/: __init__.py  cli.py  evaluate.py
domain-chip-vibe-incubator/: README.md  spark-chip.json
schemas/: spark-chip.schema.json
scripts/: claude_frontier_wrapper.ps1  codex_frontier_wrapper.ps1  spark_codez_bridge.py
tests/: test_adapters_exec.py  test_candidate_metadata.py  test_chip_contracts.py  test_chip_starter.py  test_chip_suggestions.py  test_cli_guardrails.py  test_continuous_autoloop_budget.py  test_core_truth_guards.py  test_failures.py  test_memory_paths.py  test_research_prompt_boundaries.py  test_runner_ledger_lock.py  test_runner_loop_guardrails.py  test_safe_url.py  test_self_edit_apply.py  test_spark_codez_bridge.py  test_spark_swarm_collective.py  test_subprocess_timeout.py  test_verifier_research.py  test_workspace_copy.py  test_write_working_memory_lock.py
(+93 files in other folders)
