[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-researcher"
version = "0.1.0"
description = "Lightweight autoresearch with guarded self-improvement, simple memory, and Obsidian observability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
spark-researcher = "spark_researcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

