[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-chip-pokemon-player"
version = "0.1.0"
description = "Pokemon player chip scaffold with PyBoy emulator integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyboy>=2.7,<3",
]

[project.scripts]
pokemon-player = "domain_chip_pokemon_player.play:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
