[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-chip-portfolio-knowledge"
version = "0.1.0"
description = "Spark domain chip for evaluating portfolio knowledge extraction and compounding."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
