[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domain-chip-roblox-development"
version = "0.1.0"
description = "Spark domain chip for planning and evaluating an end-to-end Roblox game delivery flywheel."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
